# rust-xrp-simple

./: .gitignore  Cargo.toml
src/: main.rs
src/xrp_transactions/: mod.rs
