[package]
name = "xrpl_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
xrpl-rs = "0.1.7"
xrpl_address_codec = "0.16.7"
secp256k1 = { version = "0.22", features = ["recovery", "rand-std"] }
rand = "0.8"
base58 = "0.2.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bech32 = "0.8"
digest = "0.10.0"  # Last 0.4.x version
ripemd = "0.1.3"
tiny-bip39 = "2.0.0"
base64 = "0.21"  # or whatever version is current
bs58 = { version = "0.4.0", features = ["check"] }
anyhow = "1.0"
hex-literal = "0.3.4"
serde-xrpl="0.1.2"